# realm-template-apps

./: .gitignore  README.md  bluehawkAll.sh  create-metadata-file.sh  manifest.json  manifest.schema.json  package-lock.json
.github/workflows/: check-manifest.yml  push-artifact-cpp.yml  push-artifact-edge-server.yml  push-artifact-flutter.yml  push-artifact-kotlin.yml  push-artifact-maui.yml  push-artifact-react-native.yml  push-artifact-swiftui.yml  push-artifact-web-data-api-todo.yml  push-artifact-web-graphql-todo.yml  push-artifact-web-mql-todo.yml  push-artifact-xamarin.yml  test-web-js.yml  verify-bluehawk.yml  zip-everything-and-upload-to-s3.yml
android-kotlin/: .gitignore  README.md  build.gradle
android-kotlin/app/: build.gradle
backends/flexible-sync/: realm_config.json
electron/: .gitignore  README.md  package-lock.json  package.json  realm.json  tsconfig.json
electron/src/: realm.json
flex-sync-permissions/: bluehawk.sh
flex-sync-permissions/client/: package-lock.json  package.json
flutter/: .gitignore  README.md  pubspec.yaml
flutter/android/: build.gradle
flutter/lib/: main.dart
flutter_todo/: README.md  pubspec.yaml
flutter_todo/lib/: main.dart
flutter_todo/linux/: CMakeLists.txt
flutter_todo/test/: widget_test.dart
ios-swift/: README.md
ios-swift/App/: AppDelegate.swift  EmailPasswordViewController.swift  Realm.plist  SceneDelegate.swift  Task.swift  TasksViewController.swift  WelcomeViewController.swift  realmApp.swift
ios-swift/App.xcodeproj/: project.pbxproj
ios-swift/AppUITests/: AppUITests.swift
ios-swiftui/realm-template-apps-swiftui.xcodeproj/: project.pbxproj
kotlin-sdk/: README.md  build.gradle.kts
kotlin-sdk/app/: build.gradle.kts
maui/: realm-todo-app.sln
react-native/: README.md  package-lock.json  package.json  realm.js  realm.json
react-native-ts/: README.md  package-lock.json  package.json  realm.json
reactnative/: package.json
swiftui/: README.md
sync-todo/v2/client/cpp/: CMakeLists.txt  README.md  app-state.hpp  app_config_metadata.hpp  app_state.hpp  atlasConfig.json  database_state.hpp  item.hpp  main.cpp  offline_mode_selection.hpp  ss.hpp  subscription_selection.hpp
sync-todo/v2/client/cpp/controllers/: app_controller.cpp  app_controller.hpp  controller.hpp  home_controller.cpp  home_controller.hpp  login_controller.cpp  login_controller.hpp  navigation.cpp  navigation.hpp
sync-todo/v2/client/cpp/data/: app-config-metadata.cpp  app-config-metadata.hpp  app-state.hpp  auth-manager.cpp  auth-manager.hpp  item-manager.cpp  item-manager.hpp  item.hpp  offline-mode-selection.hpp  subscription-selection.hpp
sync-todo/v2/client/cpp/managers/: auth_manager.cpp  auth_manager.hpp  database_manager.cpp  database_manager.hpp  error_manager.cpp  error_manager.hpp  item_manager.cpp  item_manager.hpp
sync-todo/v2/client/cpp/screens/: authentication.cpp  authentication.hpp  dashboard.cpp  dashboard.hpp  display-screen.hpp  error-modal.cpp  error-modal.hpp  item-list.cpp  item-list.hpp  options.cpp  options.hpp  scroller.cpp  scroller.hpp  static-dashboard.cpp  static-dashboard.hpp
sync-todo/v2/client/cpp/state/: app_config_metadata.cpp  app_config_metadata.hpp  app_state.hpp  database_state.hpp  home_controller_state.hpp  home_screen_button_state.hpp  item.hpp  offline_mode_selection.hpp  subscription_selection.hpp
sync-todo/v2/client/cpp/views/: home_screen_button_row.cpp  home_screen_button_row.hpp  login_view.cpp  login_view.hpp  scroller.cpp  scroller.hpp
todo-nonsync/: realm_config.json
todo-sync/: config.json  realm_config.json
tools/: bluehawkAll.sh
triggers/: realm_config.json
web-graphql/: package.json
web-js/: .env  README.md  README.rst  package-lock.json  package.json
web-mql/: package-lock.json
xamarin/: README.md  realm-template-app.sln  realm-todo-app.sln
(+701 files in other folders)
